--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "personal-web",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://timothyzhou.com",
+  "homepage": "https://timzhou99.github.io/personal-web/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
