--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "personal-web",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://timzhou99.github.io/personal-web/",
+  "homepage": "https://timothyzhou.com",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
