--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.8.1",
+    "react-social-icons": "^4.1.0",
     "styled-components": "^5.1.1"
   },
   "scripts": {
