--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^16.13.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.3",
     "react-scroll": "^1.8.1",
     "react-social-icons": "^4.1.0",
     "styled-components": "^5.1.1"
@@ -24,7 +24,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -44,6 +44,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "ajv": "^8.0.0",
+    "ajv-keywords": "^5.0.0",
+    "gh-pages": "^6.3.0"
   }
 }
